--- a/index.html
+++ b/index.html
@@ -46,24 +46,24 @@
       <div class="row">
         <div class="col-lg-4 col-md-6">
           <div class="thumbnail">
-            <img src="IMG_0705.jpg">
+            <img src="IMG_0705.JPG">
           </div>        
         </div>
 
         <div class="col-lg-4 col-md-6">
           <div class="thumbnail">
-            <img src="IMG_0708.jpg">
+            <img src="IMG_0708.JPG">
           </div>
         </div>
 
         <div class="col-lg-4 col-md-6">
           <div class="thumbnail">
-            <img src="IMG_0710.jpg">
+            <img src="IMG_0710.JPG">
           </div>
         </div>
         <div class="col-lg-4 col-md-6">
           <div class="thumbnail">
-            <img src="IMG_0716.jpg">
+            <img src="IMG_0716.JPG">
           </div>        
         </div>
 
