--- a/index.html
+++ b/index.html
@@ -43,46 +43,13 @@
         <p>Karen Yulissa Beza Alarcon de Lopez</p>
       </div>
 
-      <div class="row">
-        <div class="col-lg-4 col-md-6">
-          <div class="thumbnail">
-            <img src="IMG_0705.JPG">
-          </div>        
-        </div>
-
-        <div class="col-lg-4 col-md-6">
-          <div class="thumbnail">
-            <img src="IMG_0708.JPG">
-          </div>
-        </div>
-
-        <div class="col-lg-4 col-md-6">
-          <div class="thumbnail">
-            <img src="IMG_0710.JPG">
-          </div>
-        </div>
-        <div class="col-lg-4 col-md-6">
-          <div class="thumbnail">
-            <img src="IMG_0716.JPG">
-          </div>        
-        </div>
-
-        <div class="col-lg-4 col-md-6">
-          <div class="thumbnail">
-            <img src="5.jpg">
-          </div>
-        </div>
-
-        <div class="col-lg-4 col-md-6">
-          <div class="thumbnail">
-            <img src="6.jpg">
-          </div>
-        </div>
-
-      </div>
+          <canvas></canvas>
 
     </div>
-
+    <script type="text/javascript" src="display.js"></script>
+    <script type="text/javascript" src="square.js"></script>
+    <script type="text/javascript" src="player.js"></script>
+    <script type="text/javascript" src="main.js"></script>
     <script src="http://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js" integrity="sha384-uefMccjFJAIv6A+rW+L4AHf99KvxDjWSu1z9VI8SKNVmz4sk7buKt/6v9KI65qnm" crossorigin="anonymous"></script>
 </body>
