--- a/index.html
+++ b/index.html
@@ -47,6 +47,8 @@
 
     </div>
     <script type="text/javascript" src="display.js"></script>
+    <script type="text/javascript" src="rocket.js"></script>
+    <script type="text/javascript" src="explosion.js"></script>
     <script type="text/javascript" src="square.js"></script>
     <script type="text/javascript" src="player.js"></script>
     <script type="text/javascript" src="main.js"></script>
