--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
     </div>
     <script type="text/javascript" src="display.js"></script>
     <script type="text/javascript" src="rocket.js"></script>
+    <script type="text/javascript" src="enemyMissile.js"></script>
     <script type="text/javascript" src="explosion.js"></script>
     <script type="text/javascript" src="square.js"></script>
     <script type="text/javascript" src="player.js"></script>
