Added new missile type

--- a/game.html
+++ b/game.html
@@ -41,6 +41,7 @@
     <script type="text/javascript" src="explosion.js"></script>
     <script type="text/javascript" src="square.js"></script>
     <script type="text/javascript" src="graphics.js"></script>
+    <script type="text/javascript" src="homingMissile.js"></script>
     <script type="text/javascript" src="game.js"></script>
     <script type="text/javascript" src="main.js"></script>
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
