--- a/game.html
+++ b/game.html
@@ -34,18 +34,18 @@
     </div>
   </nav>
     <canvas></canvas>
-    <script type="text/javascript" src="display.js"></script>
-    <script type="text/javascript" src="rocket.js"></script>
-    <script type="text/javascript" src="gameObject.js"></script>
-    <script type="text/javascript" src="enemyMissile.js"></script>
-    <script type="text/javascript" src="explosion.js"></script>
-    <script type="text/javascript" src="square.js"></script>
-    <script type="text/javascript" src="graphics.js"></script>
-    <script type="text/javascript" src="homingMissile.js"></script>
-    <script type="text/javascript" src="vector2.js"></script>
-    <script type="text/javascript" src="ghostParticle.js"></script>
-    <script type="text/javascript" src="game.js"></script>
-    <script type="text/javascript" src="main.js"></script>
+    <script type="text/javascript" src="game1/display.js"></script>
+    <script type="text/javascript" src="game1/rocket.js"></script>
+    <script type="text/javascript" src="game1/gameObject.js"></script>
+    <script type="text/javascript" src="game1/enemyMissile.js"></script>
+    <script type="text/javascript" src="game1/explosion.js"></script>
+    <script type="text/javascript" src="game1/square.js"></script>
+    <script type="text/javascript" src="game1/graphics.js"></script>
+    <script type="text/javascript" src="game1/homingMissile.js"></script>
+    <script type="text/javascript" src="game1/vector2.js"></script>
+    <script type="text/javascript" src="game1/ghostParticle.js"></script>
+    <script type="text/javascript" src="game1/game.js"></script>
+    <script type="text/javascript" src="game1/main.js"></script>
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js" integrity="sha384-uefMccjFJAIv6A+rW+L4AHf99KvxDjWSu1z9VI8SKNVmz4sk7buKt/6v9KI65qnm" crossorigin="anonymous"></script>
 </body>
